RESOLVED FIXED171052
createElementNS() should now throw only InvalidCharacterError, not NamespaceError
https://bugs.webkit.org/show_bug.cgi?id=171052
Summary createElementNS() should now throw only InvalidCharacterError, not NamespaceE...
Attachments
Patch (322.83 KB, patch)
2017-04-21 13:24 PDT, Chris Dumez
no flags
Patch (346.96 KB, patch)
2017-04-21 14:15 PDT, Chris Dumez
no flags
Patch (346.99 KB, patch)
2017-04-21 14:23 PDT, Chris Dumez
no flags
Archive of layout-test-results from ews102 for mac-elcapitan (1.02 MB, application/zip)
2017-04-21 16:11 PDT, Build Bot
no flags
Archive of layout-test-results from ews117 for mac-elcapitan (1.84 MB, application/zip)
2017-04-21 16:17 PDT, Build Bot
no flags
Archive of layout-test-results from ews104 for mac-elcapitan-wk2 (1002.26 KB, application/zip)
2017-04-21 16:47 PDT, Build Bot
no flags
Patch (349.31 KB, patch)
2017-04-21 19:40 PDT, Chris Dumez
no flags
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 (1.14 MB, application/zip)
2017-04-21 20:26 PDT, Build Bot
no flags
Patch (350.04 KB, patch)
2017-04-21 21:02 PDT, Chris Dumez
no flags
Patch (350.86 KB, patch)
2017-04-21 21:07 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-04-21 13:24:50 PDT
Chris Dumez
Comment 2 2017-04-21 14:15:16 PDT
Chris Dumez
Comment 3 2017-04-21 14:23:16 PDT
Build Bot
Comment 4 2017-04-21 16:11:01 PDT
Comment on attachment 307806 [details] Patch Attachment 307806 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/3579078 New failing tests: http/tests/misc/acid3.html
Build Bot
Comment 5 2017-04-21 16:11:03 PDT
Created attachment 307824 [details] Archive of layout-test-results from ews102 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 6 2017-04-21 16:17:27 PDT
Comment on attachment 307806 [details] Patch Attachment 307806 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/3578976 New failing tests: http/tests/misc/acid3.html
Build Bot
Comment 7 2017-04-21 16:17:28 PDT
Created attachment 307825 [details] Archive of layout-test-results from ews117 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 8 2017-04-21 16:47:27 PDT
Comment on attachment 307806 [details] Patch Attachment 307806 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/3579255 New failing tests: http/tests/misc/acid3.html
Build Bot
Comment 9 2017-04-21 16:47:29 PDT
Created attachment 307839 [details] Archive of layout-test-results from ews104 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Chris Dumez
Comment 10 2017-04-21 19:40:53 PDT
Build Bot
Comment 11 2017-04-21 20:26:35 PDT
Comment on attachment 307865 [details] Patch Attachment 307865 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/3581102 New failing tests: http/tests/misc/acid3.html
Build Bot
Comment 12 2017-04-21 20:26:37 PDT
Created attachment 307873 [details] Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Chris Dumez
Comment 13 2017-04-21 21:02:36 PDT
Chris Dumez
Comment 14 2017-04-21 21:07:12 PDT
Chris Dumez
Comment 15 2017-04-24 16:43:34 PDT
Comment on attachment 307879 [details] Patch Clearing flags on attachment: 307879 Committed r215701: <http://trac.webkit.org/changeset/215701>
Chris Dumez
Comment 16 2017-04-24 16:43:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.